--- a/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
+++ b/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
@@ -8,16 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:theme="@android:style/Theme.NoTitleBar"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-        s>
-        <activity
-            android:name=".choose_lang">
-        </activity>
-
-        <activity
-            android:name=".welcome">
+        android:theme="@style/AppTheme">
+        <activity android:name=".help"></activity>
+        <activity android:name=".about" />
+        <activity android:name=".choose_lang" />
+        <activity android:name=".welcome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
