--- a/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
+++ b/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".transportTips"></activity>
-        <activity android:name=".choose_category" />
-        <activity android:name=".help" />
-        <activity android:name=".about" />
-        <activity android:name=".choose_lang" />
-        <activity android:name=".welcome">
+        <activity android:name=".schedule"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".transportTips" />
+        <activity android:name=".choose_category" />
+        <activity android:name=".help" />
+        <activity android:name=".about" />
+        <activity android:name=".choose_lang" />
+        <activity android:name=".welcome" />
     </application>
 
 </manifest>
