--- a/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
+++ b/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
@@ -9,22 +9,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".slidetips"/>
+
+        <activity android:name=".socialTips"/>
+
+        <activity android:name=".outdoorsTips" />
+
+        <activity android:name=".worklifeTips" />
+
+        <activity android:name=".householdTips" />
+        <activity android:name=".slidetips" />
+
         <activity
             android:name=".schedule"
             android:windowSoftInputMode="adjustPan" />
+
         <activity android:name=".splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".transportTips" />
+
+        <activity
+            android:name=".transportTips"
+            android:windowSoftInputMode="adjustNothing" />
+
         <activity android:name=".choose_category" />
+
         <activity android:name=".help" />
+
         <activity android:name=".about" />
+
         <activity android:name=".choose_lang" />
+
         <activity android:name=".welcome" />
     </application>
 
