--- a/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
+++ b/GreenTipsAlpha1/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".transportslide"></activity>
+        <activity android:name=".ScheduleActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".DatabaseActivity" />
+        <activity android:name=".transportslide" />
         <activity android:name=".socialTips" />
         <activity android:name=".outdoorsTips" />
         <activity android:name=".worklifeTips" />
